--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "dayjs": "^1.11.5",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "mui-tel-input": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-js-loader": "^0.1.0",
+    "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
     "styled-components": "^5.3.5",
